--- a/src/classes/WaveApplicationObject.cls
+++ b/src/classes/WaveApplicationObject.cls
@@ -2,4 +2,5 @@ public class WaveApplicationObject {
 	public String name {get; set;}
 	public String url {get; set;}
 	public Integer recordsToProcess {get; set;}
+	public List<WaveApplicationObjectRelation> relations { get; set; }
 }
