--- a/src/classes/WaveMetadataApplicationObject.cls
+++ b/src/classes/WaveMetadataApplicationObject.cls
@@ -2,5 +2,5 @@ public class WaveMetadataApplicationObject {
 	public String name;
 	public String url;
 	public List<WaveMetadataApplicationObject> children;
-	public List<WaveObjectRelation> relations;
+	public List<WaveMetadataApplicationObjectRelation> relations;
 }
