Finished object loader

--- a/src/classes/CsvDataImportBatch.cls
+++ b/src/classes/CsvDataImportBatch.cls
@@ -6,8 +6,6 @@ global class CsvDataImportBatch implements Database.Batchable<List<String>>, Dat
 	private List<WaveApplicationObjectRelation> relations;
 	private SObjectType objectType;
 	private List<SmartLookup> smartLookups;
-	private List<SmartLookup> nameSmartLookups;
-	private List<SmartLookup> externalIdSmartLookups;
 	private List<String> debugMessages;
 	
 	global CsvDataImportBatch(SObjectType objectType, List<List<String>> csvData, Map<Integer, String> fieldPositions, List<WaveApplicationObjectRelation> relations) {
@@ -15,8 +13,6 @@ global class CsvDataImportBatch implements Database.Batchable<List<String>>, Dat
 		this.csvData = csvData;
 		this.fieldPositions = fieldPositions;
 		this.relations = relations;
-		this.nameSmartLookups = new List<SmartLookup>();
-		this.externalIdSmartLookups = new List<SmartLookup>();
 		this.debugMessages = new List<String>();
 
 		// Then we get the table of <fieldName, columnIndexInCSV
@@ -33,8 +29,6 @@ global class CsvDataImportBatch implements Database.Batchable<List<String>>, Dat
 	global Iterable<List<String>> start(Database.BatchableContext BC) {
 		
 		// Prepare headers and return all data
-		//this.prepareNameSmartLookups();
-		//this.prepareExternalIdSmartLookups();
 		this.prepareSmartLookups();
 
 		return this.csvData;
@@ -42,13 +36,10 @@ global class CsvDataImportBatch implements Database.Batchable<List<String>>, Dat
 
    	global void execute(Database.BatchableContext BC, List<List<String>> scope) {
 
-   		System.debug('About to process ' + scope.size() + ' records of type ' + this.objectType.getDescribe().getName());
+   		//System.debug('About to process ' + scope.size() + ' records of type ' + this.objectType.getDescribe().getName());
 		
    		// First handle smart lookups
-   		//this.smartLookupNameToId(scope);
-   		//this.smartLookupExternalId(scope);
    		this.processSmartLookupForBatch(scope);
-
 
    		List<SObject> objectsBatch = new List<SObject>();
    		List<String> lstExternalIds = new List<String>();
@@ -132,8 +123,8 @@ global class CsvDataImportBatch implements Database.Batchable<List<String>>, Dat
 	        	}
 	        }
 
-	        System.debug(lstToInsert.size() + ' objects to insert.');
-	        System.debug(lstToUpdate.size() + ' objects to update.');
+	        //System.debug(lstToInsert.size() + ' objects to insert.');
+	        //System.debug(lstToUpdate.size() + ' objects to update.');
 
 	        // DML
 	        update lstToUpdate; // For now, only inserts
@@ -144,155 +135,6 @@ global class CsvDataImportBatch implements Database.Batchable<List<String>>, Dat
 	global void finish(Database.BatchableContext BC) {
 		
 	}
-
-	/*
-	// Prepares fields like UserRole.Name and Profile.Name
-	private void prepareNameSmartLookups(){
-		
-    	this.nameSmartLookups = new List<SmartLookup>();
-
-    	// It traverses the column headers by its position
-    	for(Integer columnNumber: this.fieldPositions.keySet()) {
-    		
-    		// Gets the column name
-    		String headerValue = this.fieldPositions.get(columnNumber);
-
-    		// If we find a .Name lookup
-    		if (headerValue.endsWith('.Name')) {
-            	this.nameSmartLookups.add(new SmartLookup(columnNumber, headerValue.remove('.Name')));
-        	}
-    	}
-
-    	for(Integer columnNumber: this.fieldPositions.keySet()) {
-    		//System.debug(this.fieldPositions.get(columnNumber));
-    		String headerValue = this.fieldPositions.get(columnNumber);
-    		if (headerValue.endsWith('.Name')) {
-            	// Replace column headers with .Id
-            	headerValue = headerValue.replace('.Name', 'Id');
-            	this.fieldPositions.put(columnNumber, headerValue);
-        	}
-    	}
-	}
-	
-	// Handles fields like UserRole.Name and Profile.Name - replace values in parsed CSV with ID Equivalent.	
-	// Get eligible fields and their respective column numbers	
-	private void smartLookupNameToId(List<List<String>> scope){
-	
-		if(scope != null) {		
-
-        	// Get all possible unique values to be replaced with IDs
-	        for (SmartLookup smLookUp : this.nameSmartLookups) {
-	            for (List<String> row : scope) {
-	                smLookUp.plainTextValues.add(row[smLookUp.columnNumber]);
-	            }
-	        }
-
-	        // Get mapping of id to name, and add to lookup object
-	        for (SmartLookup s : this.nameSmartLookups) {
-
-	        	System.debug('Handling smart lookups Name To Id for objects of type: ' + s.SObjectType + '.');
-	            
-	            List<String> relevantValues = new List<String>(s.plainTextValues);
-				String generatedQuery = 'SELECT Id, Name FROM ' + s.SObjectType + ' WHERE Name IN :relevantValues';
-	            List<SObject> temp = Database.query(generatedQuery);
-	            
-	            for (SObject t: temp) {
-	                s.replaceValues.put(String.valueOf(t.get('Name')), String.valueOf(t.get('Id')));
-	            }
-
-	            // Search whether there are names with not found id
-	            for(String relVal: relevantValues) {
-	            	if(!s.replaceValues.containsKey(relVal)){
-	            		// Log Ids that weren't found for the name
-	            		System.debug(String.format('Id not found for name {0}, SObject: {1}. This may cause an exception.', new String[]{ relVal, s.SObjectType }));
-	            	}
-	            	else {
-						System.debug('Id for ' + relVal + ': ' + s.replaceValues.get(relVal));
-	            	}
-	            }	            
-	        }
-	        
-	        // Replace name values with Id equivalent
-	        for (List<String> row : scope) {
-	            for (SmartLookup s: this.nameSmartLookups) {
-	            	row[s.ColumnNumber] = s.replaceValues.get(row[s.ColumnNumber]);
-	            }
-	        }
-		}
-	}
-
-	// Handles fields like Case.External_Id__c and Owner.External_Id__c
-	private void prepareExternalIdSmartLookups(){
-
-		this.externalIdSmartLookups = new List<SmartLookup>();
-
-    	for(Integer columnNumber: this.fieldPositions.keySet()) {
-    		String headerValue = this.fieldPositions.get(columnNumber);
-    		if (headerValue.endsWithIgnoreCase('.External_Id__c')) {
-            	this.externalIdSmartLookups.add(new SmartLookup(columnNumber, headerValue.removeEndIgnoreCase('.External_Id__c')));
-        	}
-    	}
-
-    	for(Integer columnNumber: this.fieldPositions.keySet()) {
-    		//System.debug(this.fieldPositions.get(columnNumber));
-    		String headerValue = this.fieldPositions.get(columnNumber);
-    		if (headerValue.endsWithIgnoreCase('.External_Id__c')) {
-            	// Replace column headers with .Id
-            	headerValue = headerValue.replace('.External_Id__c', 'Id');
-            	this.fieldPositions.put(columnNumber, headerValue);
-        	}
-    	}
-	}
-
-	private void smartLookupExternalId(List<List<String>> scope){
-		
-		if(scope != null) {
-
-        	// Get all possible unique values to be replaced with IDs
-	        for (SmartLookup smLookUp : this.externalIdSmartLookups) {
-	            for (List<String> row : scope) {
-	                smLookUp.plainTextValues.add(row[smLookUp.columnNumber]);
-	            }
-	        }
-
-	        // Get mapping of id to name, and add to lookup object
-	        for (SmartLookup s : this.externalIdSmartLookups) {	        	
-	            
-	            List<String> relevantValues = new List<String>(s.plainTextValues);
-	            String sObjToQuery = s.SObjectType;
-	            if(sObjToQuery == 'Owner'){
-	            	sObjToQuery = 'User';
-	            }
-
-	            System.debug('Handling smart lookups External_Id__c To Id for objects of type: ' + sObjToQuery + '.');
-
-				String generatedQuery = 'SELECT Id, External_Id__c FROM ' + sObjToQuery + ' WHERE External_Id__c IN :relevantValues';
-	            List<SObject> temp = Database.query(generatedQuery);
-	            
-	            for (SObject t: temp) {
-	                s.replaceValues.put(String.valueOf(t.get('External_Id__c')), String.valueOf(t.get('Id')));
-	            }
-
-	            // Search whether there are Extenal_Id__c with not found id
-	            for(String relVal: relevantValues) {
-	            	if(!s.replaceValues.containsKey(relVal)){
-	            		// Log Ids that weren't found for the name
-	            		System.debug(String.format('Id not found for External_Id__c {0}, SObject: {1}. This may cause an exception.', new String[]{ relVal, sObjToQuery }));
-	            	}
-	            	else {
-	            		System.debug('Id for ' + relVal + ': ' + s.replaceValues.get(relVal));
-	            	}
-	            }
-	        }
-	        
-	        // Replace name values with Id equivalent
-	        for (List<String> row : scope) {
-	            for (SmartLookup s: this.externalIdSmartLookups) {
-	            	row[s.ColumnNumber] = s.replaceValues.get(row[s.ColumnNumber]);
-	            }
-	        }
-		}
-	}*/
 
 	private void prepareSmartLookups(){
 		
@@ -308,12 +150,8 @@ global class CsvDataImportBatch implements Database.Batchable<List<String>>, Dat
     		smLookUp.SObjectType = relObj.targetSObject;
     		smLookUp.targetField = relObj.targetSObjectLookupField;
 
-    		System.debug(smLookUp);
-
     		this.fieldPositions.put(smLookUp.columnNumber, relObj.foreignKeyField);
     		this.smartLookups.add(smLookUp);
-
-    		System.debug(this.fieldPositions.get(smLookUp.columnNumber));
     	}
 	}
 
@@ -351,7 +189,7 @@ global class CsvDataImportBatch implements Database.Batchable<List<String>>, Dat
 	            		System.debug(String.format('Id not found for {0} = \'{1}\' in SObject: {2}. This may cause an exception.', new String[]{ sFieldToQuery, relVal, sObjToQuery }));
 	            	}
 	            	else {
-	            		System.debug('Successful lookup in ' + sObjToQuery + ' object. Id for ' + sFieldToQuery + ' = ' + relVal + ': ' + s.replaceValues.get(relVal));
+	            		//System.debug('Successful lookup in ' + sObjToQuery + ' object. Id for ' + sFieldToQuery + ' = ' + relVal + ': ' + s.replaceValues.get(relVal));
 	            	}
 	            }
 	        }
