--- a/src/classes/WaveMetadataApplicationObject.cls
+++ b/src/classes/WaveMetadataApplicationObject.cls
@@ -1,6 +1,7 @@
 public class WaveMetadataApplicationObject {
 	public String name;
 	public String url;
+	public String metadataUrl;
 	public List<WaveMetadataApplicationObject> children;
 	public List<WaveMetadataApplicationObjectRelation> relations;
 }
