--- a/src/classes/WaveApplicationObject.cls
+++ b/src/classes/WaveApplicationObject.cls
@@ -3,4 +3,5 @@ public class WaveApplicationObject {
 	public String url {get; set;}
 	public Integer recordsToProcess {get; set;}
 	public List<WaveApplicationObjectRelation> relations { get; set; }
+	public List<WaveApplicationObjectField> fields { get; set; }
 }
