--- a/src/classes/SF_MetadataUtils.cls
+++ b/src/classes/SF_MetadataUtils.cls
@@ -50,6 +50,62 @@ public with sharing class SF_MetadataUtils {
 
 	public void createObject(String objName){
 		
+		List<MetadataService.SaveResult> results;
+		MetadataService.MetadataPort service = createService();
+		MetadataService.CustomObject cObj = new MetadataService.CustomObject();
+        cObj.fullName = objName + '__c';
+        cObj.label = objName;
+        cObj.pluralLabel = objName;
+        cObj.nameField = new MetadataService.CustomField();
+        cObj.nameField.type_x = 'AutoNumber';
+        cObj.nameField.label = objName + ' Name';
+        cObj.deploymentStatus = 'Deployed';
+        cObj.sharingModel = 'ReadWrite';
+
+        results = service.createMetadata(
+            new MetadataService.Metadata[] { cObj }
+        );
+
+        if(results != null && results.size() > 0 && results.get(0).success){
+        	existingObjectsMap.put(objName, true);
+        }
+        else {
+        	// Return error messages
+        }
+	}
+
+	public void createField(CustomFieldSpecification fieldSpec){
+		
+		List<MetadataService.SaveResult> results;
+		MetadataService.MetadataPort service = createService();
+		MetadataService.CustomField cField = new MetadataService.CustomField();
+        cField.fullName = fieldSpec.ObjectName + '.' + fieldSpec.Name + '__c';
+        cField.label = fieldSpec.Label;
+        cField.type_x = fieldSpec.Type;
+        cField.referenceTo = fieldSpec.ReferenceTo;
+        cField.length = fieldSpec.Length;
+
+        // CONTINUAR ACA
+
+        results = service.createMetadata(
+            new MetadataService.Metadata[] { cField }
+        );
+
+        if(results != null && results.size() > 0 && results.get(0).success){
+        	Map<String, Boolean> fieldsMap;
+        	if(!this.existingFieldsMap.containsKey(fieldSpec.ObjectName)){
+        		fieldsMap = new Map<String, Boolean>();
+        		this.existingFieldsMap.put(fieldSpec.ObjectName, fieldsMap);
+        	}
+        	else {
+        		fieldsMap = this.existingFieldsMap.get(fieldSpec.ObjectName);
+        	}
+        	
+        	fieldsMap.put(fieldSpec.Name, true);
+        }
+        else {
+        	// Return error messages
+        }
 	}
 
 	public static MetadataService.MetadataPort createService()
@@ -59,5 +115,18 @@ public with sharing class SF_MetadataUtils {
         service.SessionHeader.sessionId = UserInfo.getSessionId();
         
         return service;
+    }
+
+    public class CustomFieldSpecification {
+    	public String ObjectName;
+    	public String Name;
+    	public String Label;
+    	public String Type;
+		public String ReferenceTo;
+		public Integer Length;
+		public Integer Precision;
+		public Integer Scale;
+		public Boolean IsExternalId;
+		public Boolean IsRequired;
     }
 }
